Fix bug causing small screen header to overlap body content. Add media queries for screen sizes 700px and down.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
 /* make header stick to top of page */
 header {
     position: fixed;
+    top: 0;
     width: 100%;
     height: 85px;
     z-index: 3;
@@ -49,6 +50,7 @@ h2 {
 
      display: flex;
      justify-content: space-between;
+     border-bottom: 2px solid #1d3124;
 }
 
 #menu li {
@@ -88,6 +90,9 @@ h2 {
     width: 100%;
     background: url('../images/man-meditating-on-dock.jpg') no-repeat center center;
     background-size: cover;
+
+    display: flex;
+    margin: auto;
 
 /* animates zoom effect on home page */
 
@@ -299,7 +304,7 @@ animation-fill-mode: backwards;
 }
 
 .method-card {
-    height: 250px;
+    height: fit-content;
     width: 40%;
     font-size: 80%;
     margin: auto;
@@ -630,8 +635,7 @@ animation-fill-mode: backwards;
     transition: 0.4s;
 }
 
-/* media queries */
-
+/* Media queries */
 
 /*For larger to medium screen sizes from 1200px wide and down */
 
@@ -673,18 +677,18 @@ animation-fill-mode: backwards;
 
 
 /* For medium screen sizes from 950px wide and down */
-@media screen and (max-width: 1060px) {
+@media screen and (max-width: 950px) {
 
     .header {
         flex-wrap: wrap;
     }
 
-    #logo {
-        display: wrap;
-    }
-
     .cover-text {
         left: 30%;
+    }
+
+    #signup-cover-text {
+        left: 20%;
     }
 
     .card {
@@ -707,7 +711,7 @@ animation-fill-mode: backwards;
 
     #menu {
         font-size: 100%;
-        line-height: 40px;
+        line-height: 30px;
     }
 
     #logo {
@@ -716,20 +720,104 @@ animation-fill-mode: backwards;
 
     /* sets order of nav links in menu */
 
-    #order-1 {
+    .order-1 {
         order: 1;
     }
 
-    #order-2 {
+    .order-2 {
         order: 2;
     }
 
-    #order-3 {
+    .order-3 {
         order: 3;
     }
 
-    #order-4 {
+    .order-4 {
         order: 4;
     }
 
+    #sign-up {
+        border: none;
+    }
+
+    /* stops header from overlapping page content */
+
+    #hero-outer, #meditation-hero-outer, #yoga-hero-outer, #signup-hero-outer {
+        padding-top: 150px;
+    }
+    
+}
+
+/* For medium screen sizes from 750px wide and down */
+@media screen and (max-width: 750px) {
+
+    #form-img {
+        display: none;
+    }
+}
+
+/* For medium screen sizes from 700px wide and down */
+@media screen and (max-width: 700px) {
+
+    #incense-img, #yoga-equipment {
+        height: 250px;
+    }
+
+    .cover-text {
+        left: 17.5%;
+    }
+
+    #signup-cover-text {
+        left: 10%;
+    }
+
+    .card-wrapper {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        width: 40%;
+    }
+   
+    #middle-card {
+        width: 100%;
+        padding-top: 2%;
+    }
+    
+    #newsletter {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .bottom-card {
+        width: 50%;
+        height: 100px;
+    }
+
+    .bottom-card p {
+        padding: 2%;
+    }
+
+    #woods-meditation-img {
+        padding-bottom: none;
+        width: 30%;
+    }
+
+    #correlation-graph {
+        margin-bottom: 4%;
+    }
+
+    /* sets order of 'cards' on landing page */
+
+    .card-1 {
+        order: 1
+    }
+
+    .card-2 {
+        order: 2
+    }
+
+    .card-3 {
+        order: 3
+    }
 }
